Archive2/72/95d18b93217929/output
main.cpp:11:12: error: chosen constructor is explicit in copy-initialization
    return {1, 2};
           ^~~~~~
main.cpp:6:14: note: constructor declared here
    explicit X(int, bool) { }
             ^
1 error generated.
